test/semantic/error/err_02_access_child_local.pl0
program childAccess;
procedure parent();
  procedure child();
    var locChild;
  begin locChild := 1 end;
begin
  locChild := 2; { Error: locChild is in child }
end;
begin call parent() end